1. Supports user friendly bot interaction with Get Started button & greeting text 2. Parameterized bot name to help deploy this to both India & Indonesia

--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,4 @@ CARD_PATH=http://localhost:9000/cards/
 MAPSERVER=http://localhost:9000/map/
 X_API_KEY=""
 SERVER=http://localhost:8001/
+BOTNAME="RiskMap"
