--- a/serverless.yml
+++ b/serverless.yml
@@ -1,12 +1,15 @@
-service: facebookmessenger
+service: riskmapbot
+
+custom:
+  projectName: riskmapbot
 
 provider:
   name: aws
   runtime: nodejs6.10
   stage: dev
-  region: ap-southeast-1
+  region: ${file(./${opt:area}.env.yml):region}
   stackTags:
-    area: ${file(./tags.yml):area}
+    area: ${file(./${opt:area}.env.yml):area}
 
 # You can overwrite defaults by adding the following
 #  stage: dev
@@ -14,18 +17,36 @@ provider:
 
 # Add one function for each Lambda
 functions:
-  webhook: # Lambda that gets triggered when user starts a conversation
-    handler: handler.webhook
+  facebookWebhook: # Lambda that gets triggered when user starts a conversation with Facebook Messenger bot
+    handler: handler.facebookWebhook
+    environment:
+      FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
+      DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
+      FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
+      FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
+      SERVER_API_KEY: ${file(./${opt:area}.env.yml):serverapikey}
+      SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
+      SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
     events:
       - http:
-          path: webhook
+          path: facebook/webhook
           method: GET # This webhook lambda is called by Facebook to verify the tokens
           integration: lambda
       - http:
-          path: webhook
+          path: facebook/webhook
           method: POST # On POST, this lambda talks to the cognicity server to fetch unique cardId, constructs a response and sends the card OTL to the user
           integration: lambda
-  reply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
-    handler: handler.reply
+  facebookReply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
+    handler: handler.facebookReply
+    environment:
+      FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
+      DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
+      FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
+      FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
+      SERVER_API_KEY: ${file(./${opt:area}.env.yml):serverapikey}
+      SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
+      SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
     events:
       - sns: Facebook
