deploy fb to Indonesia

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,17 +3,22 @@ service: facebookmessenger
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: dev
-  region: us-east-1
-
-# You can overwrite defaults by adding the following
-#  stage: dev
-#  region: us-east-1
+  stage: ${file(./${opt:area}.env.yml):stage}
+  region: ${file(./${opt:area}.env.yml):region}
 
 # Add one function for each Lambda
 functions:
-  webhook: # Lambda that gets triggered when user starts a conversation
+  facebookWebhook: # Lambda that gets triggered when user starts a conversation
     handler: handler.webhook
+    environment:
+      FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
+      DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
+      FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
+      FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
+      SERVER_API_KEY: ${file(./${opt:area}.env.yml):serverapikey}
+      SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
+      SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
     events:
       - http:
           path: webhook
@@ -23,7 +28,7 @@ functions:
           path: webhook
           method: POST # On POST, this lambda talks to the cognicity server to fetch unique cardId, constructs a response and sends the card OTL to the user
           integration: lambda
-  reply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
+  facebookReply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
     handler: handler.reply
     events:
-      - sns: Facebook
+      - sns: ${file(./${opt:area}.env.yml):facebooksns}
