--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,7 @@ plugins:
   - serverless-plugin-scripts
 
 custom:
-  projectName: riskmapbot
+  projectName: facebookbot
   scripts:
     hooks:
       #when the lambda is set up, we should make sure to deploy the buttons
@@ -13,18 +13,23 @@ custom:
 provider:
   name: aws
   runtime: nodejs6.10
-  stackTags:
-    area: ${file(./${opt:area}.env.yml):area}
   stage: ${file(./${opt:area}.env.yml):stage}
   region: ${file(./${opt:area}.env.yml):region}
+  stackTags:
+    area: ${file(./${opt:area}.env.yml):area}
+
+# You can override defaults by adding the following
+#  stage: dev
+#  region: us-west-2
 
 # Add one function for each Lambda
 functions:
   facebookWebhook: # Lambda that gets triggered when user starts a conversation
-    handler: handler.facebookWebhook
+    handler: bin/functions/receive/index.facebookDMWebhook
     environment:
       FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
       FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
+      FACEBOOK_APP_SECRET: ${file(./${opt:area}.env.yml):facebookappsecret}
       DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
       FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
       FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
@@ -41,10 +46,11 @@ functions:
           method: POST # On POST, this lambda talks to the cognicity server to fetch unique cardId, constructs a response and sends the card OTL to the user
           integration: lambda
   facebookReply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
-    handler: handler.facebookReply
+    handler: bin/functions/send/index.facebookReply
     environment:
       FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
       FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
+      FACEBOOK_APP_SECRET: ${file(./${opt:area}.env.yml):facebookappsecret}
       DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
       FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
       FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
@@ -52,4 +58,4 @@ functions:
       SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
       SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
     events:
-      - sns: ${file(./${opt:area}.env.yml):facebooksns}
+      - sns: Facebook
