--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "cognicity-reports-facebook",
   "version": "1.0.0",
-  "description": "A serverless messenger chatbot which will send one time card links and report notifications",
-  "main": "handler.js",
+  "description": "Facebook Messenger bot running on AWS lambda",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src",
+    "mocha": "nyc mocha --compilers js:babel-core/register src/test/index",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "npm run lint && npm run mocha",
+    "build": "./node_modules/.bin/babel src -d bin"
   },
+  "keywords": [
+    "bot",
+    "facebook"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/urbanriskmap/cognicity-reports-facebook.git"
   },
-  "author": "Maanasa Priyaa, Abraham Quintero",
-  "license": "MIT",
+  "author": "Maanasa Priyaa, Abraham Quintero, Tomas Holderness, Cory Johnson",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/urbanriskmap/cognicity-reports-facebook/issues"
   },
@@ -19,5 +27,16 @@
     "dotenv": "^4.0.0",
     "request": "^2.81.0",
     "serverless-plugin-scripts": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-preset-env": "^1.6.1",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.16.0",
+    "eslint-config-google": "^0.9.1",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
+    "unit.js": "^2.0.0"
   }
 }
