--- a/serverless.yml
+++ b/serverless.yml
@@ -1,22 +1,20 @@
 service: riskmapbot
 
-plugins:
-  - serverless-plugin-scripts
 
 custom:
   projectName: facebookbot
   scripts:
     hooks:
       #when the lambda is set up, we should make sure to deploy the buttons
-      'deploy:finalize': export FACEBOOK_PAGE_ACCESS_TOKEN=${file(./${opt:area}.env.yml):facebookpageaccesstoken} && ./deploy_buttons.sh
+      'deploy:finalize': export FACEBOOK_PAGE_ACCESS_TOKEN=${file(./env.yml):facebookpageaccesstoken} && ./deploy_buttons.sh
 
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: ${file(./${opt:area}.env.yml):stage}
-  region: ${file(./${opt:area}.env.yml):region}
+  stage: ${file(./env.yml):stage}
+  region: ${file(./env.yml):region}
   stackTags:
-    area: ${file(./${opt:area}.env.yml):area}
+    area: ${file(./env.yml):area}
 
 # You can override defaults by adding the following
 #  stage: dev
@@ -27,15 +25,15 @@ functions:
   facebookWebhook: # Lambda that gets triggered when user starts a conversation
     handler: bin/functions/receive/index.facebookDMWebhook
     environment:
-      FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
-      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
-      FACEBOOK_APP_SECRET: ${file(./${opt:area}.env.yml):facebookappsecret}
-      DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
-      FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
-      FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
-      SERVER_API_KEY: ${file(./${opt:area}.env.yml):serverapikey}
-      SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
-      SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
+      FACEBOOK_VALIDATION_TOKEN: ${file(./env.yml):facebookvalidationtoken}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./env.yml):facebookpageaccesstoken}
+      FACEBOOK_APP_SECRET: ${file(./env.yml):facebookappsecret}
+      DEFAULT_LANG: ${file(./env.yml):defaultlang}
+      FRONTEND_CARD_PATH: ${file(./env.yml):frontendcardpath}
+      FRONTEND_MAP_PATH: ${file(./env.yml):frontendmappath}
+      SERVER_API_KEY: ${file(./env.yml):serverapikey}
+      SERVER_PATH: ${file(./env.yml):serverpath}
+      SERVER_PORT: ${file(./env.yml):serverport}
     events:
       - http:
           path: facebook/webhook
@@ -48,14 +46,14 @@ functions:
   facebookReply: # Lambda that gets triggered when a message is published to the SNS topic Facebook
     handler: bin/functions/send/index.facebookReply
     environment:
-      FACEBOOK_VALIDATION_TOKEN: ${file(./${opt:area}.env.yml):facebookvalidationtoken}
-      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./${opt:area}.env.yml):facebookpageaccesstoken}
-      FACEBOOK_APP_SECRET: ${file(./${opt:area}.env.yml):facebookappsecret}
-      DEFAULT_LANG: ${file(./${opt:area}.env.yml):defaultlang}
-      FRONTEND_CARD_PATH: ${file(./${opt:area}.env.yml):frontendcardpath}
-      FRONTEND_MAP_PATH: ${file(./${opt:area}.env.yml):frontendmappath}
-      SERVER_API_KEY: ${file(./${opt:area}.env.yml):serverapikey}
-      SERVER_PATH: ${file(./${opt:area}.env.yml):serverpath}
-      SERVER_PORT: ${file(./${opt:area}.env.yml):serverport}
+      FACEBOOK_VALIDATION_TOKEN: ${file(./env.yml):facebookvalidationtoken}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${file(./env.yml):facebookpageaccesstoken}
+      FACEBOOK_APP_SECRET: ${file(./env.yml):facebookappsecret}
+      DEFAULT_LANG: ${file(./env.yml):defaultlang}
+      FRONTEND_CARD_PATH: ${file(./env.yml):frontendcardpath}
+      FRONTEND_MAP_PATH: ${file(./env.yml):frontendmappath}
+      SERVER_API_KEY: ${file(./env.yml):serverapikey}
+      SERVER_PATH: ${file(./env.yml):serverpath}
+      SERVER_PORT: ${file(./env.yml):serverport}
     events:
       - sns: Facebook
