--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,9 @@
-VALIDATIONTOKEN=token used to validate messenger webhooks
-APPSECRET=app secret key got on creating facebook app
-PAGEACCESSTOKEN=access token for the page to which the app has subscribed
-FACEBOOKSNS=sns topic name for facebok
+FACEBOOK_VALIDATION_TOKEN=token used to validate messenger webhooks
+FACEBOOK_PAGE_ACCESS_TOKEN=access token for the page to which the app has subscribed
+FACEBOOK_APP_SECRET=app secret key got on creating facebook app
 DEFAULT_LANG=en
-CARD_PATH=http://localhost:9000/cards/
-MAPSERVER=http://localhost:9000/map/
-X_API_KEY=""
-SERVER=http://localhost:8001/
-BOTNAME="RiskMap"
+FRONTEND_CARD_PATH=http://localhost:9000/cards/
+FRONTEND_MAP_PATH=https://riskmap.us/map/
+SERVER_API_KEY="abc"
+SERVER_PATH=http://127.0.0.1
+SERVER_PORT=8001
