--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js: '8.10'
 
-script: npm run test
+script: npm run test && npm run coverage
 
 before_deploy:
   - npm run build
@@ -15,7 +15,7 @@ deploy:
     module_name: "bin/functions/receive"
     handler_name: "default"
     on:
-      branch: refactor 
+      branch: dev 
   - provider: lambda
     function_name: "cognicity-facebook-reply-dev"
     region: $AWS_REGION
@@ -24,4 +24,4 @@ deploy:
     module_name: "bin/functions/send"
     handler_name: "default"
     on:
-      branch: refactor
+      branch: dev
