update readme and example .env

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,7 @@
-FACEBOOK_VALIDATION_TOKEN=token used to validate messenger webhooks
-FACEBOOK_PAGE_ACCESS_TOKEN=access token for the page to which the app has subscribed
-FACEBOOK_APP_SECRET=app secret key got on creating facebook app
-DEFAULT_LANG=en
-FRONTEND_CARD_PATH=http://localhost:9000/cards/
-FRONTEND_MAP_PATH=https://riskmap.us/map/
-SERVER_API_KEY="abc"
-SERVER_PATH=http://127.0.0.1
-SERVER_PORT=8001
+CARDS_API=https://data.cognicity-server.com/cards
+CARDS_API_KEY=KEY
+CARDS_URL=https://cards.cognicity-server.com/flood/
+DEFAULT_LANGUAGE=en
+FACEBOOK_PAGE_ACCESS_TOKEN=TOKEN
+FACEBOOK_VALIDATION_TOKEN=TOKEN
+MAP_URL=https://cognicity.server.com/
