--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js: '8.10'
 
-#script: npm run test && npm run coverage
-script: npm run lint
+script: npm run test && npm run coverage
 
 before_deploy:
   - npm run build
