encode payload before hashing

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "axios": "^0.18.0",
     "dotenv": "^4.0.0",
     "request": "^2.83.0",
-    "serverless-plugin-scripts": "^1.0.2"
+    "serverless-plugin-scripts": "^1.0.2",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
