--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,7 @@ CARDS_API=https://data.cognicity-server.com/cards
 CARDS_API_KEY=KEY
 CARDS_URL=https://cards.cognicity-server.com/flood/
 DEFAULT_LANGUAGE=en
+FACEBOOK_APP_SECRET=SECRET
 FACEBOOK_PAGE_ACCESS_TOKEN=TOKEN
 FACEBOOK_VALIDATION_TOKEN=TOKEN
 MAP_URL=https://cognicity.server.com/
