add India prod deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,3 +67,23 @@ deploy:
     handler_name: "default"
     on:
       branch: master
+  # India Prod Webhook
+  - provider: lambda
+    function_name: "cognicity-facebook-webhook-prod"
+    region: $AWS_REGION_IN
+    role: $AWS_LAMBDA_ROLE
+    runtime: "nodejs8.10"
+    module_name: "bin/functions/receive"
+    handler_name: "default"
+    on:
+      branch: master
+  # India Prod Reply
+  - provider: lambda
+    function_name: "cognicity-facebook-reply-prod"
+    region: $AWS_REGION_IN
+    role: $AWS_LAMBDA_ROLE
+    runtime: "nodejs8.10"
+    module_name: "bin/functions/send"
+    handler_name: "default"
+    on:
+      branch: master
